[gd_scene load_steps=6 format=3 uid="uid://cgbj60loxro2m"]

[ext_resource type="Texture2D" uid="uid://bilgiyxochn7e" path="res://images/sprites/weapons/__0003_broca_base_maos.png" id="1_42kuw"]
[ext_resource type="Script" path="res://scripts/weapons/drill_weapon.gd" id="1_tvr25"]
[ext_resource type="Texture2D" uid="uid://3d76cbtovs8p" path="res://images/sprites/weapons/__0004_broca_idle.png" id="2_domsh"]
[ext_resource type="Texture2D" uid="uid://c0kvxufjxbjqt" path="res://images/sprites/weapons/__0005_broca_on.png" id="3_3jv0c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ietmd"]
size = Vector2(151, 142)

[node name="DrillWeapon" type="Node2D"]
y_sort_enabled = true
position = Vector2(2.08165e-12, 2.08165e-12)
script = ExtResource("1_tvr25")
cooldown_time = 0.2
move_speed = 100.0
slow_texture = ExtResource("2_domsh")
fast_texture = ExtResource("3_3jv0c")
swap_time_range = Vector2(0.5, 0.3)
warm_time = 1.0
overheat_time = 5.0
heat_color = Color(1, 0.211765, 0, 1)

[node name="SpriteRoot" type="Node2D" parent="."]
y_sort_enabled = true

[node name="HurtBox" type="Area2D" parent="SpriteRoot"]
visible = false
position = Vector2(95, -2.11478e-12)
collision_layer = 0
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpriteRoot/HurtBox"]
position = Vector2(20.5, 0)
shape = SubResource("RectangleShape2D_ietmd")
debug_color = Color(1, 0, 0, 0.419608)

[node name="DrillBase" type="Sprite2D" parent="SpriteRoot"]
y_sort_enabled = true
position = Vector2(174.565, -2.73913)
texture = ExtResource("1_42kuw")
offset = Vector2(-86.5654, 2.73913)

[node name="DrillTip" type="Sprite2D" parent="SpriteRoot/DrillBase"]
modulate = Color(1, 0.211765, 0, 1)
z_index = 1
y_sort_enabled = true
position = Vector2(-71.6464, -2.55268)
rotation = -0.00881857
texture = ExtResource("2_domsh")
offset = Vector2(26.081, 2.29181)
